# gimbal_autoprop_sample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gimbal_autoprop_sample/include/: gimbal_autoprop.h  sample_object.h
gimbal_autoprop_sample/src/: main.c  sample_object.c
